Fix image on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,10 @@ p {
     font-size: 16px;
 }
 
+/* wider displays */
+/*@media (min-width: 415px) {}*/
+/* small displays */
+/*@media (max-width: 414px) {}*/
 .grid-image {
-    max-height: 600px;
+    max-width: 50%;
 }
